--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,34 +10,22 @@ if (EMSCRIPTEN)
     set(BGFX_CONFIG_MULTITHREADED ON)
     set(CMAKE_TOOLCHAIN_FILE ${EMSCRIPTEN}/cmake/Modules/Platform/Emscripten.cmake)
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sINITIAL_MEMORY=536870912")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sPTHREAD_POOL_SIZE=16")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sNO_EXIT_RUNTIME=1")
-    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sALLOW_MEMORY_GROWTH")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sUSE_GLFW=3")
+    add_link_options(-sINITIAL_MEMORY=536870912)
+    add_link_options(-sPTHREAD_POOL_SIZE=16)
+    add_link_options(-sNO_EXIT_RUNTIME=1)
+    #add_compile_options(-sALLOW_MEMORY_GROWTH)
+    add_link_options(-sUSE_GLFW=3)
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --preload-file ${CMAKE_SOURCE_DIR}/run@/")
-
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-command-line-argument -pthread")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wno-unused-command-line-argument -pthread")
-    set(CMAKE_EXECUTABLE_SUFFIX .html)
+    add_compile_options(-Wno-unused-command-line-argument -pthread)
+    add_link_options(-Wno-unused-command-line-argument -pthread)
+    #set(CMAKE_EXECUTABLE_SUFFIX .html)
 else ()
     message("not an emscripten build")
     add_subdirectory(thirdparty/glfw)
 endif ()
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address -fsanitize=undefined")
-elseif(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math -march=native -mtune=native -fopenmp")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
-endif()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
+add_compile_options(-stdlib=libc++)
+add_link_options(-stdlib=libc++)
 
 add_subdirectory(thirdparty/bgfx.cmake)
 add_subdirectory(thirdparty/fmt)
@@ -45,7 +33,30 @@ add_subdirectory(thirdparty/stuff/libs/blas)
 add_subdirectory(thirdparty/stuff/libs/expected)
 add_subdirectory(thirdparty/stuff/libs/thread)
 
+### SHADERS
+
+bgfx_compile_shader_to_header(
+        TYPE VERTEX
+        SHADERS ${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/imgui/imgui.vs.sc
+        VARYING_DEF ${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/imgui/varying.def.sc
+        OUTPUT_DIR ${CMAKE_BINARY_DIR}/inc/shaders/
+        INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/thirdparty/bgfx.cmake/bgfx/src/
+)
+
+bgfx_compile_shader_to_header(
+        TYPE FRAGMENT
+        SHADERS ${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/imgui/imgui.fs.sc
+        VARYING_DEF ${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/imgui/varying.def.sc
+        OUTPUT_DIR ${CMAKE_BINARY_DIR}/inc/shaders/
+        INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/thirdparty/bgfx.cmake/bgfx/src/
+)
+
+### LIBRARY
+
 add_library(${PROJECT_NAME}
+        #${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/imgui/imgui.vs.sc
+        #${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/imgui/imgui.fs.sc
+
         thirdparty/imgui/imgui.cpp
         thirdparty/imgui/imgui_draw.cpp
         thirdparty/imgui/imgui_tables.cpp
@@ -67,7 +78,18 @@ target_link_libraries(${PROJECT_NAME}
         )
 target_include_directories(${PROJECT_NAME} PUBLIC
         thirdparty/imgui
+        ${CMAKE_BINARY_DIR}/inc/
         inc)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+    #target_compile_options(${PROJECT_NAME} PUBLIC -fsanitize=address -fsanitize=undefined)
+    #target_link_options(${PROJECT_NAME} PUBLIC -fsanitize=address -fsanitize=undefined)
+    add_compile_options(-fsanitize=address -fsanitize=undefined)
+    add_link_options(-fsanitize=address -fsanitize=undefined)
+elseif (CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+    add_compile_options(-ffast-math -march=native -mtune=native -fopenmp -flto)
+    add_link_options(-fopenmp -flto)
+endif ()
 
 ### DEMO
 
@@ -75,5 +97,11 @@ add_subdirectory(thirdparty/stuff/libs/qoi)
 
 add_executable(${PROJECT_NAME}_demo
         examples/demo/main.cpp)
+
+if (EMSCRIPTEN)
+    set_target_properties(${PROJECT_NAME}_demo PROPERTIES EXECUTABLE_SUFFIX .html)
+    target_link_options(${PROJECT_NAME}_demo PRIVATE --preload-file ${CMAKE_SOURCE_DIR}/run@/)
+    target_link_options(shaderc PRIVATE --embed-file ${CMAKE_SOURCE_DIR}/src/boilerplate/shaders/)
+endif ()
 
 target_link_libraries(${PROJECT_NAME}_demo ${PROJECT_NAME} stuff_qoi)
